# telegraf-exec-fortiswitch

./: .gitignore  .pre-commit-config.yaml  README.md  fortiswitch_app.py  fortiswitch_cli.py  fortiswitch_telegraf_cli.py  pyproject.toml  requirements.txt
fortiswitch/: __init__.py  api_dispatcher.py  fortiswitch.py  fortiswitch_sdk.py
fortiswitch/core/: __init__.py  request.py  session.py
fortiswitch/logging/: __init__.py  handler.py
fortiswitch/monitor/: __init__.py  switch.py
fortiswitch/utils/: __init__.py  logging_handler.py
