[tool.poetry]
name = "telegraf-exec-fortiswitch"
version = "0.1.0"
description = ""
authors = ["Emil Vonck <emil.vonck@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
ipython = "bandit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
