[tool.poetry]
name = "telegraf-exec-fortiswitch"
version = "0.1.0"
description = ""
authors = ["Emil Vonck <emil.vonck@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
pre-commit = "^2.20.0"
rich = "^12.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
